[gd_scene load_steps=10 format=2]

[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Assets/Shared/XTypeInfo_RightSide/XTypeInfo_RightSide_Border_6x6.png" type="Texture" id=1]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Assets/Shared/XTypeInfo_RightSide/XTypeInfo_RightSide_Background.png" type="Texture" id=2]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Subs/Almanac_XTypeInfoPanel/Shared/Almanac_XTypeInfo_XImage/Almanac_XTypeInfo_XImage.tscn" type="PackedScene" id=3]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Subs/Almanac_XTypeInfoPanel/Shared/Almanac_XTypeInfo_XName/Almanac_XTypeInfo_XName.tscn" type="PackedScene" id=4]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Subs/Almanac_XTypeInfoPanel/Shared/Almanac_XTypeInfoPanel_MultiStatsPanel/Almanac_XTypeInfo_MultiStatsPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Subs/Almanac_XTypeInfoPanel/Shared/Almanac_XTypeInfo_Description/Almanac_XTypeInfo_Descriptions.tscn" type="PackedScene" id=6]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Subs/Almanac_XTypeInfoPanel/Almanac_XTypeInfoPanel/Almanac_XTypeInfoPanel.gd" type="Script" id=7]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Subs/Almanac_XTypeInfoPanel/TowerSpecific/Almanac_TowerTypeInfoPanel_ColorPanel/Almanac_TowerTypeInfoPanel_ColorPanel.tscn" type="PackedScene" id=8]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Subs/Almanac_XTypeInfoPanel/TowerSpecific/Almanac_TowerTypeInfoPanel_TierAndIngPanel/Almanac_TowerTypeInfoPanel_TierAndIngPanel.tscn" type="PackedScene" id=9]

[node name="Almanac_XTypeInfoPanel" type="MarginContainer"]
margin_right = 240.0
margin_bottom = 480.0
script = ExtResource( 7 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 240.0
margin_bottom = 480.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="LeftBorder" type="TextureRect" parent="."]
margin_right = 6.0
margin_bottom = 480.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 1 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="."]
margin_left = 234.0
margin_right = 240.0
margin_bottom = 480.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 1 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="."]
margin_right = 240.0
margin_bottom = 6.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 1 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="."]
margin_top = 474.0
margin_right = 240.0
margin_bottom = 480.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 1 )
stretch_mode = 2

[node name="Content" type="MarginContainer" parent="."]
margin_right = 240.0
margin_bottom = 480.0
custom_constants/margin_right = 12
custom_constants/margin_top = 15
custom_constants/margin_left = 12
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Content"]
margin_left = 12.0
margin_top = 15.0
margin_right = 228.0
margin_bottom = 465.0

[node name="HBoxContainer" type="HBoxContainer" parent="Content/VBoxContainer"]
margin_left = 56.0
margin_right = 160.0
margin_bottom = 50.0
size_flags_horizontal = 6

[node name="Almanac_TowerTypeInfoPanel_ColorPanel" parent="Content/VBoxContainer/HBoxContainer" instance=ExtResource( 8 )]
margin_right = 16.0
margin_bottom = 50.0
size_flags_horizontal = 2

[node name="Almanac_XTypeInfo_XImage" parent="Content/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 20.0
margin_right = 70.0
margin_bottom = 50.0

[node name="Almanac_TowerTypeInfoPanel_TierAndIngPanel" parent="Content/VBoxContainer/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 74.0
margin_right = 104.0
margin_bottom = 50.0

[node name="Almanac_XTypeInfo_XName" parent="Content/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 54.0
margin_right = 216.0
margin_bottom = 85.0

[node name="Almanac_XTypeInfo_MultiStatsPanel" parent="Content/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 89.0
margin_right = 216.0
margin_bottom = 239.0
rect_min_size = Vector2( 0, 150 )

[node name="Almanac_XTypeInfo_Descriptions" parent="Content/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 243.0
margin_right = 216.0
margin_bottom = 393.0
rect_min_size = Vector2( 0, 150 )
size_flags_vertical = 3

[node name="Almanac_SynTypeInfo_TierDescriptions" parent="Content/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 397.0
margin_right = 216.0
margin_bottom = 450.0
size_flags_vertical = 3
